[package]
name = "tfpk_web_client"
version = "0.1.0"
authors = ["Tom <tom@tfpk.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
web-sys = "0.3.61"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.20" , features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
